--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-mocks": "^14.0.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "typescript": "~4.6.2"
